# kolodziej

./: .gitignore  README.md  main.py  main.spec  my.cpp  pyproject.toml  requirements.txt  testdata.txt
.github/workflows/: pyinstaller.yml
