[project]
name = "kolodziej"
version = "2.0"
description = ""
authors = [
    {name = "Marcin Zepp",email = "nircek-2103@protonmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "python-docx (>=1.1.2,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
